<resources>
    <string name="app_name">Money Manager</string>
    <string name="welcome_ru">Добро пожаловать!</string>
    <string name="welcomeDescription_ru">Вы только что сделали первый шаг, чтобы привести в порядок вашу финансовую сферу. "\n" Давайте начнем!</string>
    <string name="backPressed">Press once again to exit</string>
    <string name="operations">Operations</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="operations_ru">Операции</string>
    <string name="accounts_ru">Счета</string>
    <string name="categories_ru">Категории</string>
    <string name="statistics_ru">Статистика</string>
    <string name="backPressed_ru">Нажмите дважды для выхода из приложения</string>
    <string name="press_plus_to_add_operation">Изменяйте остатки по счетам\nво вклаке \"Счета\" меню навигации.\n\nДля добавления операции\nнажмите \" + \"</string>
    <string name="dialog_add_category_title">Добавление новой категории</string>
    <string name="all_add">Добавить</string>
    <string name="all_cancel">Отмена</string>
    <string name="enter_category_name">Введите название категории</string>
    <string name="save_ru">Сохранить</string>
    <string name="description_ru">Описание (опционально)</string>
    <string name="sum_ru">Сумма</string>
    <string name="consumption_ru">Расход</string>
    <string name="income_ru">Доход</string>
    <string name="select_category_ru">Выберите категорию:</string>
    <string name="select_account_ru">Выберите счет:</string>
    <string name="enter_sum_ru">Введите сумму:</string>
    <string name="database">db_save_money.db</string>
</resources>
