<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="operationsViewModel"
            type="com.eugene_poroshin.money_manager.ui.operations.OperationsViewModel"/>

        <variable
            name="categoryViewModel"
            type="com.eugene_poroshin.money_manager.ui.categories.CategoryViewModel"/>

        <variable
            name="accountsViewModel"
            type="com.eugene_poroshin.money_manager.ui.accounts.AccountsViewModel"/>

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_add_operation_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_operation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Расход"
            app:titleTextColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_add_operation">

            <RadioButton
                android:id="@+id/radioButtonConsumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={operationsViewModel.isIncome}"
                android:text="@string/consumption_ru"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButtonIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/income_ru"
                android:textSize="14sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewSelectCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/select_category_ru"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:categoriesEntries="@{categoryViewModel.liveDataCategories}"
            app:categoriesSpinnerClicks="@={operationsViewModel.categoryPosition}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectCategory" />

        <TextView
            android:id="@+id/textViewSelectAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/select_account_ru"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategories" />

        <Spinner
            android:id="@+id/spinnerAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:accountsEntries="@{accountsViewModel.liveDataAccounts}"
            app:accountsSpinnerClicks="@={operationsViewModel.accountPosition}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelectAccount" />

        <TextView
            android:id="@+id/textViewAddBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/enter_sum_ru"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAccounts" />

        <EditText
            android:id="@+id/editTextBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@={operationsViewModel.sum}"
            android:hint="@string/sum_ru"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddBalance" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@={operationsViewModel.description}"
            android:hint="@string/description_ru"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextBalance" />

        <Button
            android:id="@+id/buttonSaveOperation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/res_background_round_rect_red"
            android:text="@string/save_ru"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:onClick="@{()->operationsViewModel.saveOperation()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>